2006-04-01  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_priv.h:
	Use fb's depth-to-planemask computation, which doesn't suffer from
	getting a 1 planemask at depth 32.  Fixes Get/PutImage xtest tests.

2006-04-01  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	Unconditionally run the XP_USE_FREETYPE AM_CONDITIONAL, not just in
	the Xprint-only path.  Make AC_ARG_ENABLE for freetype and AC_ARG_WITH
	for freetype-config conditional also.
	Bug #5801: Check for MTRR support under Linux.  Minor refactoring of
	the code checking this for other OSes.
	(To those wondering about the date: Yes, this is me doing an Xprint
	commit, but it fixes the --disable-xprint path, so.)

	* xkb/xkb.c: (XkbSizeVirtualModMap):
	Bug #6428: Fix off-by-one error when walking off the end of the
	vmodmap list.

2006-03-31  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa_unaccel.c: (ExaCheckComposite):
	Don't attempt to Prepare/FinishAccess NULL pDrawables.  Exposed by new
	gradient testing in rendercheck.

2006-03-31  Eric Anholt  <anholt@FreeBSD.org>

	* exa/exa.c: (exaGetPixmapOffset), (exaPixmapIsOffscreen),
	(exaPrepareAccess), (exaFinishAccess), (exaDriverInit):
	* exa/exa_accel.c: (exaPutImage):
	* exa/exa_migration.c: (exaPixmapSave), (exaMoveInPixmap),
	(exaMoveOutPixmap):
	* exa/exa_priv.h:
	* exa/exa_render.c: (exaRasterizeTrapezoid), (exaAddTriangles):
	* exa/exa_unaccel.c: (exaPrepareAccessGC), (exaFinishAccessGC),
	(ExaCheckFillSpans), (ExaCheckPolylines), (ExaCheckPolySegment),
	(ExaCheckPolyArc), (ExaCheckPolyFillRect), (ExaCheckImageGlyphBlt),
	(ExaCheckPolyGlyphBlt), (ExaCheckPushPixels):
	* hw/kdrive/ephyr/ephyr.h:
	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrPreparePipelinedAccess),
	(ephyrFinishPipelinedAccess), (ephyrPrepareSolid),
	(ephyrDoneSolid), (ephyrPrepareCopy), (ephyrDoneCopy),
	(ephyrPrepareComposite), (ephyrDoneComposite),
	(ephyrDownloadFromScreen), (ephyrUploadToScreen),
	(ephyrPrepareAccess), (ephyrDrawInit), (exaDDXDriverInit):